<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/release"
                android:textAlignment="center"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/tv_tvshow_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                tools:text="@string/release" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/tv_tvshow_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                tools:text="@string/duration" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_tvshow_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        tools:text="@string/title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:layout_marginTop="12dp"
        android:textColor="@color/teal_200" />

    <TextView
        android:id="@+id/tv_tvshow_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/overview"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_marginTop="16dp"
        android:textColor="@color/teal_200" />

    <TextView
        android:id="@+id/tv_tvshow_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/genre"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:layout_marginTop="12dp"
        android:textColor="@color/teal_200" />

    <TextView
        android:id="@+id/tv_tvshow_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/creator"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cast"
        android:layout_marginTop="12dp"
        android:textColor="@color/teal_200" />

    <TextView
        android:id="@+id/tv_tvshow_cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/cast"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"/>

</LinearLayout>